Update Makefiles {PART 2/2}

--- a/amavutils/Makefile
+++ b/amavutils/Makefile
@@ -1,43 +1,25 @@
-M_PREFIX=$(AML_LIBS_STAGING_DIR)/usr
-LIB_DIR?=$(M_PREFIX)/lib
-HEADERS_DIR?=$(M_PREFIX)/include
+NAME = libamavutils
 
-TARGET_OBJS=amaudioutils.o amconfigutils.o amdisplayutils.o ammodule.o amsysfsutils.o Amvideoutils.o itemlist.o\
+TARGET = libamavutils.so
+
+TARGET_OBJS = itemlist.o amconfigutils.o amaudioutils.o amdisplayutils.o amsysfsutils.o amutils_common.o Amvideoutils.o
 
 TARGET=libamavutils.so
 
-INSTALL_DIR=${LIB_DIR}/aml_libs
+LDFLAGS += -shared -lm -lrt -fPIC
 
-LDFLAGS += -shared -lpthread -lm -lrt
-
-TOPDIR=$(shell pwd)
-SRC?=$(TOPDIR)
+TARGET_DIR=$(shell pwd)/../../../target
+STAGING_DIR=$(shell pwd)/../../../staging
 
 CFLAGS+=-O2 -fPIC -g
-CFLAGS+=-I$(SRC) -I$(SRC)/include -I$(SRC)/../amcodec/include -L${LIB_DIR} -I$(HEADERS_DIR)
-
-
-
-
+CFLAGS+=-I$(shell pwd) -I$(shell pwd)/include -I$(shell pwd)/../amcodec/include -I${STAGING_DIR}/include -I${STAGING_DIR}/usr/include -L${TARGET_DIR}/lib -L${TARGET_DIR}/usr/lib
 
 export CC CFLAGS
 
 all: $(TARGET) 
 
 $(TARGET): $(TARGET_OBJS)
-	$(CC) $(CFLAGS) $(LDFLAGS) $(TARGET_OBJS:%.o=%.c) -o $@  
-
-    
-    
-
-install:
-	-install -m 555 ${TARGET} $(INSTALL_DIR)
-	cp  -rf $(SRC)/include/*  $(HEADERS_DIR)/
-
-force:
+	$(CC) $(CFLAGS) $(LDFLAGS) $(TARGET_OBJS:%.o=%.c) -o $@
 
 clean:
-	-rm -rf *.o ${AMADEC_DIST} ${MP3LIB} $(PCMLIB) $(ADPCMLIB) $(AACLIB) $(A52LIB)
-
-    
-
+	-rm -rf *.o $(TARGET)
