--- a/amplayer/Makefile
+++ b/amplayer/Makefile
@@ -1,3 +1,6 @@
+CC=${HOST_GCC}
+
+export CC
 all:
 	$(MAKE) -f Makefile.mk  TARGET=libamplayer.so
 	
@@ -8,6 +11,3 @@ install:
 clean:
 	-$(MAKE) -f Makefile.mk clean
 
-
-
-	
